# KIBA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURE_LIST.md  Install Kiba (Mac).command  Install Kiba (Windows).bat  LICENSE  QUICKSTART.md  README.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  launch-kiba.command  notarize-mac.sh  package.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build-installer.yml
docs/guide/: SETUP_GUIDE.md  TESTING.md
docs/i18n/: README_AR.md  README_FR.md  README_HI.md  README_PT.md  README_RU.md
ide/: README.md
ide/jetbrains/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
ide/vscode/: README.md  extension.js  package.json
installer/: KIBA.iss  README.md
packaging/: README.md  SIGNING.md
packaging/macos/: build-app.sh  sign-and-notarize-app.sh
packaging/windows/: Create-Desktop-Shortcut.ps1
src/: __init__.py  agents_registry.py  checkpoint.py  cli.py  config.py  cost_tracker.py  cron.py  pricing.py  repl.py  sdk.py  settings.py
src/agent/: __init__.py  conversation.py  session.py
src/command_system/: __init__.py  builtins.py  engine.py  registry.py  types.py
src/compact_service/: service.py
src/context_system/: claude_md.py
src/hooks/: runner.py
src/mcp_client/: __init__.py  manager.py  token_store.py
src/providers/: __init__.py  _retry.py  anthropic_provider.py  glm_provider.py  openai_compatible.py
tests/: test_agent_loop.py  test_command_system.py  test_config.py  test_repl.py  test_skills_system.py  test_tool_system_tools.py
(+22 files in other folders)
