[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiba"
version = "1.2.2"
description = "KIBA — an agentic AI coding platform for your terminal. Bring your own model (Claude, GLM, GPT, Minimax)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "STO Algo LLC"},
    {name = "J_Trades"}
]
keywords = ["claude", "cli", "ai", "llm", "anthropic", "openai", "glm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic",
    "openai",
    "zhipuai",
    "python-dotenv",
    "rich",
    "prompt-toolkit",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
kiba = "src.cli:main"

[project.urls]
Homepage = "https://github.com/STO-Traders/KIBA"
Repository = "https://github.com/STO-Traders/KIBA"
Documentation = "https://github.com/STO-Traders/KIBA#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
